fix up whitespace

--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .header-container {
-    margin-bottom: 3.5rem;
+    margin-bottom: 3%;
 }
 
 .content-container {
